Allowed MSVC generator, fixed missing include
Allowed VisualStudio compiler as the CMakeLists file erroneously
disallowed that compiler as a compiler that does not support C++11.

Fixed missing include <functional> in stateStack.hpp.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,9 +12,11 @@ if(SFML_FOUND)
     target_link_libraries(Game_Project ${SFML_LIBRARIES})
 endif()
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra")
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -D NDEBUG")
+if(NOT MSVC)
+    set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra")
+    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -D NDEBUG")
+endif()
 
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
     execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
@@ -23,6 +25,7 @@ if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
     endif ()
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+elseif(MSVC)
 else ()
     message(FATAL_ERROR "Your C++ compiler does not support C++11.")
 endif ()
