Made the ResourcePacker lib optional

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,11 +24,14 @@ if(SFML_FOUND)
     target_link_libraries(Game_Project ${SFML_LIBRARIES})
 endif()
 
-find_package(ResourcePacker 1 CONFIG REQUIRED)
+find_package(ResourcePacker 1 CONFIG QUIET)
 if(ResourcePacker_FOUND)
     message(STATUS "Found ResourcePacker in ${ResourcePacker_INCLUDE_DIR}")
     include_directories(${ResourcePacker_INCLUDE_DIR})
     target_link_libraries(Game_Project ${ResourcePacker_LIBRARIES})
+    add_definitions(-DResourcePacker_FOUND)
+else()
+    message(STATUS "ResourcePacker not found, continuing without it.")
 endif()
 
 if(NOT MSVC)
