Added ResourcePacker lib for WIN installation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -62,6 +62,9 @@ install(TARGETS Game_Project DESTINATION Game_Project)
 if(WIN32)
     install(FILES "${SFML_ROOT}/bin/libsndfile-1.dll" DESTINATION Game_Project)
     install(FILES "${SFML_ROOT}/bin/openal32.dll" DESTINATION Game_Project)
+    if(ResourcePacker_FOUND)
+        install(FILES "${ResourcePacker_LIBRARY}" DESTINATION Game_Project)
+    endif()
     if(CMAKE_BUILD_TYPE MATCHES "Debug")
         install(FILES "${SFML_ROOT}/bin/sfml-audio-d-2.dll" DESTINATION Game_Project)
         install(FILES "${SFML_ROOT}/bin/sfml-graphics-d-2.dll" DESTINATION Game_Project)
