--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,13 @@ endif()
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake_modules" ${CMAKE_MODULE_PATH})
 
-find_package(SFML 2 REQUIRED system window graphics network audio)
+if(BUILD_SHARED_LIBS)
+    find_package(SFML 2 REQUIRED audio network graphics window system)
+else()
+    find_package(SFML 2 REQUIRED audio-s network-s graphics-s window-s system-s)
+    add_definitions(-DSFML_STATIC)
+endif()
+
 if(SFML_FOUND)
     include_directories(${SFML_INCLUDE_DIR})
     target_link_libraries(Game_Project ${SFML_LIBRARIES})
@@ -46,11 +52,9 @@ else()
     message(STATUS "ResourcePacker not found, continuing without it.")
 endif()
 
-if(NOT MSVC)
-    set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra")
-    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -D NDEBUG")
-endif()
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -D NDEBUG")
 
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
     execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
@@ -60,9 +64,9 @@ if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
 elseif(MSVC)
-else ()
+else()
     message(FATAL_ERROR "Your C++ compiler does not support C++11.")
-endif ()
+endif()
 
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
     message(STATUS "Setting build type to 'Debug', none was specified.")
@@ -75,16 +79,16 @@ install(TARGETS Game_Project DESTINATION Game_Project)
 if(WIN32)
     install(FILES "${SFML_ROOT}/bin/libsndfile-1.dll" DESTINATION Game_Project)
     install(FILES "${SFML_ROOT}/bin/openal32.dll" DESTINATION Game_Project)
-    if(ResourcePacker_FOUND)
+    if(ResourcePacker_FOUND AND BUILD_SHARED_LIBS)
         install(FILES "${ResourcePacker_LIBRARY}" DESTINATION Game_Project)
     endif()
-    if(CMAKE_BUILD_TYPE MATCHES "Debug")
+    if(CMAKE_BUILD_TYPE MATCHES "Debug" AND BUILD_SHARED_LIBS)
         install(FILES "${SFML_ROOT}/bin/sfml-audio-d-2.dll" DESTINATION Game_Project)
         install(FILES "${SFML_ROOT}/bin/sfml-graphics-d-2.dll" DESTINATION Game_Project)
         install(FILES "${SFML_ROOT}/bin/sfml-network-d-2.dll" DESTINATION Game_Project)
         install(FILES "${SFML_ROOT}/bin/sfml-system-d-2.dll" DESTINATION Game_Project)
         install(FILES "${SFML_ROOT}/bin/sfml-window-d-2.dll" DESTINATION Game_Project)
-    else()
+    elseif(BUILD_SHARED_LIBS)
         install(FILES "${SFML_ROOT}/bin/sfml-audio-2.dll" DESTINATION Game_Project)
         install(FILES "${SFML_ROOT}/bin/sfml-graphics-2.dll" DESTINATION Game_Project)
         install(FILES "${SFML_ROOT}/bin/sfml-network-2.dll" DESTINATION Game_Project)
