Fixes to build scripts, updated README

--- a/linux_x86/build.gradle
+++ b/linux_x86/build.gradle
@@ -41,7 +41,7 @@ if(hasProperty('SFML2_DIR'))
             binaries.all {
                 cppCompiler.args "-std=c++11", "-Wall", "-Wextra"
 
-                if(hasProperty('ResourcePacker_DIR')) {
+                if(project.hasProperty('ResourcePacker_DIR')) {
                     cppCompiler.define "ResourcePacker_FOUND"
                 }
 
@@ -59,7 +59,7 @@ if(hasProperty('SFML2_DIR'))
     sources {
         game_project {
             cpp {
-                if(hasProperty('ResourcePacker_DIR')) {
+                if(project.hasProperty('ResourcePacker_DIR')) {
                     lib project: ":ResourcePacker", library: "ResourcePacker"
                 }
                 lib project: ":sfml_linux_x86", library: "sfml_system"
