--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,18 @@
 include 'linux_x86', 'linux_x86_64', 'windows_x86', 'windows_x86_64'
 
 if(hasProperty('ResourcePacker_DIR')) {
-    include 'ResourcePacker'
-    project(':ResourcePacker').projectDir = new File("$ResourcePacker_DIR")
+    include 'RP_linux_x86'
+    project(':RP_linux_x86').projectDir = new File("${ResourcePacker_DIR}/RP_linux_x86")
+
+    include 'RP_linux_x86_64'
+    project(':RP_linux_x86_64').projectDir = new File("${ResourcePacker_DIR}/RP_linux_x86_64")
+
+    include 'RP_windows_x86'
+    project(':RP_windows_x86').projectDir = new File("${ResourcePacker_DIR}/RP_windows_x86")
+
+    include 'RP_windows_x86_64'
+    project(':RP_windows_x86_64').projectDir = new File("${ResourcePacker_DIR}/RP_windows_x86_64")
+
 }
 
 if(hasProperty('SFML2_DIR')) {
