--- a/build.gradle
+++ b/build.gradle
@@ -130,11 +130,11 @@ if(hasProperty('SFML2_DIR'))
                 if(project.hasProperty('ResourcePacker_DIR')) {
                     lib project: ":ResourcePacker", library: "ResourcePacker"
                 }
-                lib project: ":SFML", library: "sfml_system"
-                lib project: ":SFML", library: "sfml_window"
-                lib project: ":SFML", library: "sfml_network"
-                lib project: ":SFML", library: "sfml_graphics"
-                lib project: ":SFML", library: "sfml_audio"
+                lib project: ":SFML", library: "sfml-system"
+                lib project: ":SFML", library: "sfml-window"
+                lib project: ":SFML", library: "sfml-network"
+                lib project: ":SFML", library: "sfml-graphics"
+                lib project: ":SFML", library: "sfml-audio"
                 source {
                     srcDir "${rootDir}/src"
                     include "**/*.cpp"
@@ -152,11 +152,11 @@ if(hasProperty('SFML2_DIR'))
                     if(project.hasProperty('ResourcePacker_DIR')) {
                         lib project: ":ResourcePacker", library: "ResourcePacker"
                     }
-                    lib project: ":SFML", library: "sfml_system"
-                    lib project: ":SFML", library: "sfml_window"
-                    lib project: ":SFML", library: "sfml_network"
-                    lib project: ":SFML", library: "sfml_graphics"
-                    lib project: ":SFML", library: "sfml_audio"
+                    lib project: ":SFML", library: "sfml-system"
+                    lib project: ":SFML", library: "sfml-window"
+                    lib project: ":SFML", library: "sfml-network"
+                    lib project: ":SFML", library: "sfml-graphics"
+                    lib project: ":SFML", library: "sfml-audio"
                     lib project: ":gtest", library: "gtest"
                     source {
                         srcDir "${rootDir}"
