Fixes to resource management
Moved context out of StateStack to Game.
Context is now supplied through update, draw, and handleEvent
functions.

Resource unload bug fixed.

Multiple state drawing bug fixed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -111,6 +111,7 @@ if(SFML_GameEngine_TEST)
     set(Unit_Tests_SOURCES
         ../UnitTests/TestEC.cpp
         ../UnitTests/TestUtility.cpp
+        ../UnitTests/TestStateStack.cpp
         ../UnitTests/main.cpp)
 
     if(WIN32)
@@ -133,4 +134,6 @@ if(SFML_GameEngine_TEST)
 
 
     add_test(NAME UnitTests COMMAND Unit_Tests)
+
+    file(COPY ../UnitTestRes DESTINATION ${CMAKE_BINARY_DIR})
 endif()
