Minor bug fixes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,6 +55,16 @@ else()
     message(STATUS "ResourcePacker not found, continuing without it.")
 endif()
 
+find_package(Rational 1 CONFIG QUIET)
+if(Rational_FOUND)
+    include_directories(${Rational_INCLUDE_DIR})
+    message(STATUS ${Rational_INCLUDE_DIR})
+    target_link_libraries(Game_Project ${Rational_LIBRARIES})
+    add_definitions(-DRational_FOUND)
+else()
+    message(STATUS "Rational not found, continuing without it.")
+endif()
+
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -D NDEBUG")
