Added support for just sf::Window for OpenGL calls

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,21 @@ endif()
 
 include_directories(${CMAKE_SOURCE_DIR})
 
+if(GAME_NO_RENDER_WINDOW)
+    message(STATUS "Disabling sf::RenderWindow")
+    add_definitions(-DGAME_NO_RENDER_WINDOW)
+    find_package(OpenGL REQUIRED)
+    find_package(GLEW REQUIRED)
+    if(OPENGL_FOUND AND GLEW_FOUND)
+        include_directories(${OpenGL_INCLUDE_DIR})
+        include_directories(${GLEW_INCLUDE_DIRS})
+        target_link_libraries(Game_Project ${OPENGL_LIBRARIES})
+        target_link_libraries(Game_Project ${GLEW_LIBRARIES})
+    endif()
+else()
+    message(STATUS "sf::RenderWindow is enabled")
+endif()
+
 if(SFML_FOUND)
     include_directories(${SFML_INCLUDE_DIR})
     target_link_libraries(Game_Project ${SFML_LIBRARIES})
@@ -153,6 +168,15 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
         include_directories(${GTEST_INCLUDE_DIRS})
         target_link_libraries(Unit_Tests ${GTEST_BOTH_LIBRARIES})
         target_link_libraries(Unit_Tests ${SFML_LIBRARIES})
+
+    if(GAME_NO_RENDER_WINDOW)
+        message(STATUS "Disabling sf::RenderWindow")
+        add_definitions(-DGAME_NO_RENDER_WINDOW)
+        if(OPENGL_FOUND AND GLEW_FOUND)
+            target_link_libraries(Unit_Tests ${OPENGL_LIBRARIES})
+            target_link_libraries(Unit_Tests ${GLEW_LIBRARIES})
+        endif()
+    endif()
 
         if(ResourcePacker_FOUND)
             target_link_libraries(Unit_Tests ${ResourcePacker_LIBRARIES})
