--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(Game_Project_SOURCES
     engine/connection.cpp
     engine/context.cpp
     engine/game.cpp
+    engine/GLHelper.cpp
     engine/gui.cpp
     engine/musicPlayer.cpp
     engine/networkIdentifiers.cpp
